<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExpenseActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="number" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/txtAmount"
        android:layout_marginTop="50dp"
        android:text="@string/tag"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/tag_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAmount"
        android:layout_alignRight="@+id/txtTag"
        android:layout_alignTop="@+id/textView2"
        android:prompt="@string/tag_spinner" />

    <EditText
        android:id="@+id/txtTag"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/txtAmount"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCreateExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/expense_create" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCreateExpense"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="59dp"
        android:text="@string/go_back" />

</RelativeLayout>